# antonic

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ant/: __init__.py  backend.py  connector.py  doc.py  errors.py  query.py  registry.py  results.py
src/ant/backends/: mongo.py
src/ant_mongo/: __init__.py  connector.py  doc.py  entity.py  errors.py  index.py  indexes.py  naming.py  registry.py
src/antonic/: __init__.py  backend.py  connector.py  constants.py  doc.py  index.py  naming.py  query.py  registry.py
src/antonic/backends/: __init__.py  mongo.py
tests/: fakes.py  test_connector.py
